[package]
name = "sqlx_macro_ex"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["yxy"]
categories = ["database"]
description = "Macros replacing sqlx-macros without compiling time"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
